--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
 
 		 map1.addSource('restaurants',{
 			 "type": 'geojson',
-			 "data": 'Restaurants.geojson',
+			 "data": 'geojson/Restaurants.geojson',
 			 "cluster": true,
 			 "clusterMaxZoom": 15,
 			 "clusterRadius": 30
