--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/es6-promise@4/dist/es6-promise.auto.min.js"></script>
 
 
-	<h1>Make youself save in COVID-19</h1>
+	<h1>Make yourself save in COVID-19</h1>
 	<div class="introduce">
 		<h2>What is COVID-19?</h2>
 		<p>Coronavirus disease (COVID-19) is an infectious disease caused by a newly discovered coronavirus. Older people and people with cardiovascular disease, diabetes, chronic respiratory disease, and cancer are more likely to develop serious illness. It takes about 5–6 days from when someone is infected with the virus for symptoms to show, however it can take up to 14 days. </p>
@@ -112,7 +112,7 @@
 	</div>
 
 	<div class="protect">
-		<h2>Protect Yourselves From Infection</h2>
+		<h2>Protect yourselves From Infection</h2>
 			<div id="protecttext">
 				<ul>
 					<li>Maintain at least a 1-metre distance between yourself and others.
